@@ -87,8 +87,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   Reservoir sampling is used to limit memory usage based on the number of
   outputs, rather than the number of inputs.
 
-  shred once again uses direct I/O where available.
-  [Regression introduced in coreutils-6.0]
+  shred once again uses direct I/O where available, and increases write block
+  size from 12KiB to 64KiB when possible.
+  [Direct I/O regression introduced in coreutils-6.0]
 
   split --line-bytes=SIZE, now only allocates memory as needed rather
   than allocating SIZE bytes at program start.
